--- a/Shop/templates/shop/product/detail.html
+++ b/Shop/templates/shop/product/detail.html
@@ -1,5 +1,6 @@
 {% extends "shop/base.html" %}
 {% load static %}
+{% load mptt_tags %}
 
 {% block title %}
   {{ product.name }}
@@ -7,11 +8,11 @@
 {% block content %}
   <div class="product-detail">
     <div class="col-sm-4">
-      <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no-image.jpg"%}{% endif %}" class="img-responsive">
+      <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no-image.png"%}{% endif %}" class="img-responsive">
     </div>
     <div class="col-sm-8">
       <h1>{{ product.name }}</h1>
-      <h2><a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></h2>
+      <h2><a href="{{ product.category.get_absolute_url_with_parent }}">{{ product.category }}</a></h2>
       <p class="price">
         {{ product.price }} руб.
       </p>
