--- a/Shop/templates/shop/product/list.html
+++ b/Shop/templates/shop/product/list.html
@@ -3,33 +3,54 @@
 {% load mptt_tags %}
 
 {% block title %}
-  {% if category %} {{ category.name }} {% else %} Страница товаров {% endif %}
+  {% if category %} {{ category.name }} {% else %} Каталог {% endif %}
 {% endblock %}
 
 
 {% block content %}
-  <div id="sidebar" class="col-sm-3">
-    <h3>Категории</h3>
-    <ul>
-      <li {% if not category %} class="selected" {% endif %}>
-        <a href="{% url "shop:ProductList" %}">Все</a>
-      </li>
-      {% for cat in categories %}
-        <li {% if category.slug == cat.slug %} class="selected" {% endif %}>
-        <a href="{{ cat.get_absolute_url }}">{{ cat.name }}</a>
-        </li>
-      {% endfor %}
-    </ul>
-  </div>
-  <div id="main" class="product_list col-sm-9">
-    <h1>{% if category %}{{ category.name }}{% else %}Товары{% endif %}</h1>
-    <div class="items row">
-        {% for cat in catChilds %}
-            <div class ="item col-sm-4">
-                <a href="{{ cat.get_absolute_url }}"> Img </a>
-                <a href="{{ cat.slug }}"> {{ cat.name }} </a>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Cars</div>
+                    <div class="panel-body"><h3> Сортировка по моделям</h3></div>
+                    <div class="panel-footer">Cars</div>
+                </div>
             </div>
-        {% endfor %}
+        </div>
+    </div><br>
+
+    <div id="sidebar" class="col-sm-3">
+        <h3>Каталог</h3>
+        <ul>
+            <li {% if not category %} class="selected" {% endif %}>
+                <a href="{% url "shop:ProductList" %}">Все</a>
+            </li>
+            {% for cat in categories %}
+                <li {% if category.slug == cat.slug %} class="selected" {% endif %}>
+                    <a href="{{ cat.get_absolute_url }}">{{ cat.name }}</a>
+                </li>
+            {% endfor %}
+        </ul>
     </div>
-  </div>
+
+    <div id="main" class="product_list col-sm-9">
+        <h1>{% if category %}{{ category.name }}{% else %}Категории{% endif %}</h1>
+        {% if not category %}
+            <div class="items row">
+                {% for cat in categories %}
+                    <div class="item col-sm-4">
+                        <a href="{{ cat.slug }}"> {{ cat.name }} </a>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+        <div class="items row">
+            {% for cat in catChilds %}
+                <div class="item col-sm-4">
+                    <a href="{{ cat.slug }}"> {{ cat.name }} </a>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
