--- a/Shop/templates/shop/base.html
+++ b/Shop/templates/shop/base.html
@@ -12,8 +12,8 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-{#    <h1 class="main_av">Автозапчасти</h1>#}
-{#    <p class="main_av">Оригинальные запчасти, автохимия, аксессуары и другое</p>#}
+    <h1 class="main_av">Автозапчасти</h1>
+    <p class="main_av">Оригинальные запчасти, автохимия, аксессуары и другое</p>
   </div>
 </div>
 
@@ -25,12 +25,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="{% url "shop:ProductList" %}">Logo</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Главная</a></li>
-        <li><a href="#">Категории</a></li>
+        <li class="active"><a href="{% url "shop:ProductList" %}">Главная</a></li>
+        <li><a href="{% url "shop:ProductList" %}">Категории</a></li>
         <li><a href="#">Контакты</a></li>
         <li><a href="#">Заказ Услуги</a></li>
         <li><a href="#">О нас</a></li>
@@ -53,7 +53,7 @@
   </div>
 </nav>
 
-<div class="container">
+<div class="container container-padding">
     {% block content %}{% endblock %}
 </div><br><br>
 
