--- a/Shop/templates/shop/product/ListByCategory.html
+++ b/Shop/templates/shop/product/ListByCategory.html
@@ -9,29 +9,33 @@
 
 
 {% block content %}
-  <div id="sidebar" class="col-sm-3">
-    <a href="{{ category.parent.get_absolute_url }}"><h2>Here</h2></a>
-    <h3>Elasticsearch</h3>
-{#    <ul>#}
-{#      <li {% if not category %} class="selected" {% endif %}>#}
-{#        <a href="{% url "shop:ProductList" %}">Все</a>#}
-{#      </li>#}
-{#      {% for cat in categories %}#}
-{#        <li {% if category.slug == cat.slug %} class="selected" {% endif %}>#}
-{#        <a href="{{ cat.get_absolute_url }}">{{ cat.name }}</a>#}
-{#        </li>#}
-{#      {% endfor %}#}
-{#    </ul>#}
-  </div>
+
+    <div id="sidebar" class="col-sm-3">
+        <a href="{{ category.parent.get_absolute_url }}"><h2>Here</h2></a>
+        <h3>Elastic search</h3>
+        <div class="item col-sm-2">
+            {% for filter in category_filters %}
+                <p>===============</p>
+                <p>{{ filter }}:</p>
+                {% for key,filter_select in  filters_select.items %}
+                    {% if key == filter %}
+                        {% for fltr_slt in filter_select %}
+                            <p>{{fltr_slt}}</p>
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+            {% endfor %}
+        </div>
+    </div>
 
   <div id="main" class="product_list col-sm-9">
     <h1>{{ category.name }}</h1>
     <div class="items row">
       {% for product in products %}
         <div class="item col-sm-4">
-          <a href="{{ product.get_absolute_url }}">
-            <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no-image.png"%}{% endif %}" class="img-responsive">
-          </a>
+            <a href="{{ product.get_absolute_url }}">
+                <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no-image.png" %}{% endif %}" class="img-responsive">
+            </a>
           <a href="{{ product.get_absolute_url }}">{{ product.name }}</a><br>
           {{ product.price }} грн.
         </div>
