--- a/Shop/templates/shop/product/list.html
+++ b/Shop/templates/shop/product/list.html
@@ -12,9 +12,17 @@
         <div class="row">
             <div class="col-sm-8">
                 <div class="panel panel-primary">
-                    <div class="panel-heading">Cars</div>
-                    <div class="panel-body"><h3> Сортировка по моделям</h3></div>
-                    <div class="panel-footer">Cars</div>
+                    <div class="panel-heading">Автомобили</div>
+                    <div class="panel-body">
+                        <ul>
+                            {% for car in cars %}
+                                <li {% if car.slug == cars.slug %} class="selected" {% endif %}>
+                                    <a href="{{ car.get_absolute_url }}">{{ car.name }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="panel-footer"><a href="#">Все марки</a></div>
                 </div>
             </div>
         </div>
