--- a/Shop/static/css/style.css
+++ b/Shop/static/css/style.css
@@ -1,153 +1,364 @@
 .panel-primary>.panel-heading {
-    color: #fff;
-    background-color:  #333;
-    border-color:  #333;
+color: #fff;
+background-color:  #333;
+border-color:  #333;
 }
 .panel-primary {
-    border-color: #101010;
+border-color: #101010;
 }
 body{
-  font-size: 15px;
-  font-family: 'Open Sans', sans-serif;
+font-size: 15px;
+font-family: 'Open Sans', sans-serif;
 }
 .top{
-  padding: 20px 0;
-  font-size: 25px;
-  font-weight: 600;
-  text-transform: uppercase;
+padding: 20px 0;
+font-size: 25px;
+font-weight: 600;
+text-transform: uppercase;
 }
 .top-bl{
-  background: #bebebe;
-  padding: 15px;
+background: #bebebe;
+padding: 15px;
 }
 .top-bl .cart{
-  float: right;
+float: right;
 }
 #sidebar ul{
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-top: 20px;
+list-style: none;
+margin: 0;
+padding: 0;
+margin-top: 20px;
 }
 #sidebar ul li{
-  padding: 5px 10px;
+padding: 5px 10px;
 }
 #sidebar ul li.selected{
-  background: #333;
-  color: white;
-  border-radius: 3px;
+background: #333;
+color: white;
+border-radius: 3px;
 }
 #sidebar ul li.selected a{
-  color: white;
+color: white;
 }
 .items{
-  margin-top: 20px;
+margin-top: 20px;
 }
 .item{
-  text-align: center;
-  margin-bottom: 30px;
+text-align: center;
+margin-bottom: 30px;
 }
 .item a img{
-  margin-bottom: 15px;
+margin-bottom: 15px;
 }
 .product-detail{
-  margin-top: 40px;
+margin-top: 40px;
 }
 .price{
-  font-weight: 600;
-  font-size: 20px;
+font-weight: 600;
+font-size: 20px;
 }
 .product-detail h2{
-  font-size: 18px;
+font-size: 18px;
 }
 form.add{
-  margin-bottom: 10px;
+margin-bottom: 10px;
 }
 form.add label{
-  margin-right: 10px;
+margin-right: 10px;
 }
 #id_quantity{
-  padding: 5px 10px;
-  border-radius: 3px;
+padding: 5px 10px;
+border-radius: 3px;
 }
 form.add input[type="submit"]{
-  background: #333;
-  border-radius: 3px;
-  border: 0;
-  padding: 5px 10px;
-  color: white;
+background: #333;
+border-radius: 3px;
+border: 0;
+padding: 5px 10px;
+color: white;
 }
 .table-cart{
-  width: 100%;
-  margin: 10px 0;
+width: 100%;
+margin: 10px 0;
 }
 .cart-img{
-  width: 10%;
+width: 10%;
 }
 th, td{
-  padding: 5px;
+padding: 5px;
 }
 thead{
-  background: #333;
-  color: white;
+background: #333;
+color: white;
 }
 .btn{
-  background: #333;
-  color: white;
+background: #333;
+color: white;
 }
 .btn-light{
-  background: #333;
+background: #333;
 }
 .order-info h2{
-  margin-bottom: 20px;
+margin-bottom: 20px;
 }
 .order-form{
-  margin-top: 20px;
-  margin-bottom: 20px;
+margin-top: 20px;
+margin-bottom: 20px;
 }
 .order-form label{
-  display: block;
+display: block;
 }
 .order-form input{
-  width: 100%;
-  padding: 5px 10px;
+width: 100%;
+padding: 5px 10px;
 }
 
-    /* Remove the navbar's default rounded borders and increase the bottom margin */
+/* Remove the navbar's default rounded borders and increase the bottom margin */
 .navbar {
-    margin-bottom: 50px;
-    border-radius: 0;
+margin-bottom: 50px;
+border-radius: 0;
 }
 
 /* Remove the jumbotron's default bottom margin */
 .jumbotron {
-    padding-top:100px;
-    color:white;
-    margin-bottom: 0;
-    background-image: url('../img/0.jpg');
+padding-top:100px;
+color:white;
+margin-bottom: 0;
+background-image: url('../img/0.jpg');
 }
 
 /* Add a gray background color and some padding to the footer */
 footer {
-    margin-bottom:-10px;
-    position: fixed; /* Фиксированное положение */
-    left: 0; bottom: 0; /* Левый нижний угол */
-    padding: 30px; /* Поля вокруг текста */
-    background: #333; /* Цвет фона */
-    color: #fff; /* Цвет текста */
-    width: 200%; /* Ширина слоя */
+margin-bottom:-10px;
+position: fixed; /* Фиксированное положение */
+left: 0; bottom: 0; /* Левый нижний угол */
+padding: 30px; /* Поля вокруг текста */
+background: #333; /* Цвет фона */
+color: #fff; /* Цвет текста */
+width: 200%; /* Ширина слоя */
 }
 .container-padding{
-    padding-bottom:100px;
+padding-bottom:100px;
 }
 .img-responsive{
-    height: 300px;
-    width: 225px;
+height: 300px;
+width: 225px;
 }
 
 .center{
 width: 150px;
-  margin: 40px auto;
+margin: 40px auto;
 }
 
+/**/
+.geke-filter{
+    width:188px;
+    /*overflow:hidden;*/
+    background:#fff;
+    font:normal 12px/16px Verdana, Arial, sans-serif;
+    text-align:left;
+}
+.geke-filter-item{
+    border-left:1px solid #e0e0e0;
+    border-right:1px solid #e0e0e0;
+    border-top:1px solid #b2b2b2;
+    position:relative;
+}
+.geke-filter-item .cancel-button{
+    /*position:absolute;*/
+    top:6px;
+    right:6px;
+    z-index:10;
+    width:15px;
+    height:15px;
+    background:url(cancel-button.png) center center no-repeat;
+    text-decoration:none;
+    display:none;
+}
+.geke-filter-item h4{
+    background:#f7f7f7;
+    margin:0;
+    padding:7px 8px;
+    font-weight:bold;
+    color:#586774;
+    position:relative;
+    z-index:1;
+}
+.geke-filter-item ul{
+    margin:0;
+    padding:10px 0;
+    overflow-y:scroll;
+    overflow-x:hidden;
+    border-bottom:1px solid #b2b2b2;
+    max-height:200px;
+    /*position:relative;*/
+    z-index:1;
+}
+.geke-filter-item ul li{
+    display:block;
+    overflow:hidden;
+    color:#586774;
+}
+.geke-filter-item ul li:hover{
+    cursor:pointer;
+}
+.geke-filter-item ul li span{
+    display:inline-block;
+    margin:-2px 5px 0 0;
+    height:12px;
+    width:12px;
+    border:1px solid #b3b3b3;
+    vertical-align:middle;
+}
+.geke-filter-item ul li.active span{
+    background:#da2031 url(list-selected.png) center center no-repeat;
+    border:1px solid #da2031;
+}
+.geke-filter-item.list li{
+    line-height:18px;
+    padding:4px 0 4px 7px;
+}
+.geke-filter-item.list li:hover{
+    background:#f7f7f7;
+}
+.geke-filter-item.calendar li{
+    line-height:23px;
+    height:23px;
+    width:31px;
+    text-align:center;
+    border:1px solid #b3b3b3;
+    border-radius:3px;
+    float:left;
+    margin:0 0 5px 7px;
+    display:table;
+}
+.geke-filter-item.calendar li:hover{
+    border:1px solid #586774;
+}
+.geke-filter-item.calendar li.active{
+    background:#da2031;
+    border:1px solid #da2031;
+    color:#fff;
+}
+.geke-filter-checkbox{
+    width:14px;
+    display:table-cell;
+}
+.geke-fliter-list-text{
+    display:table-cell;
+}
+.geke-filter-item_submit{
+    padding:10px 0;
+    text-align:center;
+    background:#f7f7f7;
+}
+.geke-filter-item_submit a{
+    display:inline-block;
+    text-decoration:none;
+    border:2px solid #bcbcbc;
+    border-radius:3px;
+    color:#303031;
+    font-weight:bold;
+    font-size:11px;
+    line-height:20px;
+    height:20px;
+    text-align:center;
+    width:156px;
+    background:#e3e4e6;
+    box-shadow:inset 2px 5px 3px 1px rgba(255,255,255,1)
+}
+.slider_values{
+    overflow:hidden;
+    padding:0 7px 12px;
+}
+.geke-filter-slider-value-left,.geke-filter-slider-value-right{
+    display:inline-block;
+    float:left;
+    font-size:12px;
+    color:#586774;
+}
+.geke-filter-slider-value-right{
+    float:right;
+}
+.geke-filter-reset{
+    padding:8px 0;
+    text-align:center;
+    background:#fff;
+}
+.geke-filter-reset a{
+    font:normal 11px/12px Tahoma, Verdana, Arial, sans-serif;
+    color:#4786e2;
+    text-decoration:none;
+    display:inline-block;
+    border-bottom:1px dashed #4786e2;
+}
+.geke-filter-reset a:hover{
+    border-bottom:1px dashed transparent;
+}
+/* jQuery UI Slider, стили здесь, чтобы не тащить весь нативный css */
+.ui-corner-all {
+    border-radius:2px;
+}
+.ui-widget-content {
+    background:#fff;
+    color:#222;
+    margin:11px 12px 17px;
+    position:relative;
+}
+.ui-widget {
 
+}
+.ui-slider-horizontal {
+    height:7px;
+    background:#f7f7f7;
+    box-shadow:inset 0 0 0 1px rgba(179,179,179,1);
+}
+.ui-slider {
+    position:relative;
+    text-align:left;
+}
+.ui-slider-horizontal .ui-slider-range {
+    height:100%;
+    top:0;
+}
+.ui-slider .ui-slider-range {
+    background:#da2031;
+    border:0 none;
+    display:block;
+    position:absolute;
+    z-index:1;
+}
+.ui-widget-header {
+    background:#ccc;
+    color:#222;
+    font-weight:bold;
+}
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+    background:#e6e6e6;
+    color:#555;
+    font-weight:normal;
+}
+.ui-slider-horizontal .ui-slider-handle {
+
+}
+.ui-slider .ui-slider-handle {
+    cursor: default;
+    height:22px;
+    position:absolute;
+    width:13px;
+    z-index:2;
+    background:url(slider.png) top center no-repeat;
+    margin:-4px 0 0 -7px;
+    cursor: pointer;
+}
+
+#main-search-found{
+    border-left: 1px solid #E1DFDD;
+    border-right: 1px solid #E1DFDD;
+    border-bottom: 1px solid #E1DFDD;
+    width: 419px;
+    height: auto;
+    background-color: white;
+    position: absolute;
+    z-index: 9999;
+}
