--- a/Shop/templates/shop/base.html
+++ b/Shop/templates/shop/base.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>{% block title %}{% endblock %}</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{% static 'css/../../static/img/../../static/css/style.css' %}">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+    <title>{% block title %}{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/../../static/img/../../static/css/style.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </head>
 <body>
 
@@ -19,75 +19,67 @@
 {#    <p class="main_av">Оригинальные запчасти, автохимия, аксессуары и другое</p>#}
 {#  </div>#}
 {#</div>#}
+<div class="container">
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{% url "shop:ProductList" %}">Logo</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="{% url "shop:ProductList" %}">Главная</a></li>
-        <li><a href="{% url "shop:ProductList" %}">Категории</a></li>
-        <li><a href="#">Контакты</a></li>
-        <li><a href="#">Заказ Услуги</a></li>
-        <li><a href="#">О нас</a></li>
-      </ul>
+    <form class="navbar-form navbar-left" action="/search/" method="POST">
 
-{#        {% block search %}#}
-{##}
-{#            {% csrf_token %}#}
-{#            <input name="search" id="search">#}
-{##}
-{#            <div id="main-search-found">#}
-{#                <!-- here the search result is paste -->#}
-{#            </div>#}
-{#        {% endblock %}#}
-
-     <form class="navbar-form navbar-left">
         <div class="form-group">
             {% block search %}
-            {% csrf_token %}
-          <input type="text" class="form-control" placeholder="Search" name="search" id="search">
-                       <div id="main-search-found">
-                <!-- here the search result is paste -->
-            </div>
+                {% csrf_token %}
+                <input type="text" class="form-control" placeholder="" name="search" id="search">
+                <div id="main-search-found">
+                    <!-- here the search result is paste -->
+                </div>
             {% endblock %}
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Вход </a></li>
-        <li>
-            {% with total_items=cart|length %}
-                {% if cart|length > 0 %}
-                    <a href="{% url "cart:CartDetail" %}"><span class="glyphicon glyphicon-shopping-cart"></span>
-                    {{ total_items }} тов. {{ cart.get_total_price }} руб.
-                    </a>
-                {% else %}
-                    <a href="{% url "cart:CartDetail" %}"><span class="glyphicon glyphicon-shopping-cart"></span> Корзина пустая</a>
-                {% endif %}
-            {% endwith %}
-        </li>
-      </ul>
+        <button type="submit" class="btn btn-default">Поиск</button>
+    </form>
+</div>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url "shop:ProductList" %}">Logo</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li><a href="{% url "shop:ProductList" %}">Главная</a></li>
+                <li><a href="{% url "shop:ProductList" %}">Категории</a></li>
+                <li><a href="#">Контакты</a></li>
+                <li><a href="#">Заказ Услуги</a></li>
+                <li><a href="#">О нас</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Вход </a></li>
+                <li>
+                    {% with total_items=cart|length %}
+                        {% if cart|length > 0 %}
+                            <a href="{% url "cart:CartDetail" %}"><span
+                                    class="glyphicon glyphicon-shopping-cart"></span>
+                                {{ total_items }} тов. {{ cart.get_total_price }} руб.
+                            </a>
+                        {% else %}
+                            <a href="{% url "cart:CartDetail" %}"><span
+                                    class="glyphicon glyphicon-shopping-cart"></span> Корзина пустая</a>
+                        {% endif %}
+                    {% endwith %}
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
 
 <div class="container container-padding">
-
-
     {% block content %}{% endblock %}
-</div><br><br>
+</div>
+<br><br>
 
 <footer class="footer">
-  <p>Footer</p>
+    <p>Footer</p>
 </footer>
 
 </body>
